--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
+            <br>
+            <p class="mdl-layout__drawer-navigation-subcategory">Стенды:</p>
             <a class="mdl-navigation__link" href="topics/architecture.html">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="topics/literature.html">Литературный Нижний</a>
         </nav>
