Разрыв строки между подкатегориями

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <nav class="mdl-navigation">
             <br>
-            <p class="mdl-layout__drawer-navigation-subcategory">Стенды:</p>
+            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:</span>
             <a class="mdl-navigation__link" href="topics/architecture.html">Архитектурный Нижний</a>
             <a class="mdl-navigation__link" href="topics/literature.html">Литературный Нижний</a>
         </nav>
