--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
+            <a class="mdl-navigation__link mdl-navigation-current-topic">Главная</a>
             <br>
-            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:</span>
-            <a class="mdl-navigation__link" href="topics/architecture.html">Архитектурный Нижний</a>
-            <a class="mdl-navigation__link" href="topics/literature.html">Литературный Нижний</a>
+            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
+                <a class="mdl-navigation__link" href="topics/architecture.html">Архитектурный Нижний</a>
+                <a class="mdl-navigation__link" href="topics/literature.html">Литературный Нижний</a>
+            </span>
         </nav>
     </div>
     <main class="mdl-layout__content">
