--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -2,9 +2,43 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../design/mdl/material.min.css">
+    <script src="../design/mdl/material.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="../css/common.css">
     <title>Архитектурный Нижний - Исторический зал</title>
 </head>
 <body>
+
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">
+                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+                <span class="mdl-layout__header-title-text">Исторический зал</span>
+            </span>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer">
+        <div class="mdl-layout-drawer-title-area">
+            <img class="navigation-logo mdl-layout-drawer-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+            <span class="mdl-layout-title">Исторический зал</span>
+        </div>
+        <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="../index.html">Главная</a>
+            <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
+                <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
+                <a class="mdl-navigation__link" href="literature.html">Литературный Нижний</a>
+            </span>
+        </nav>
+    </div>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+
+        </div>
+    </main>
+</div>
 
 </body>
 </html>
