--- a/topics/literature.html
+++ b/topics/literature.html
@@ -7,6 +7,7 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
+    <script src="../js/common.js"></script>
     <title>Литературный Нижний - Исторический зал</title>
 </head>
 <body>
