--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/common.css">
     <script src="js/common.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Merriweather' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/index.css">
     <title>Исторический зал</title>
 </head>
 <body>
@@ -37,7 +39,24 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-
+            <h3>Приветствуем в Историческом зале</h3>
+            <h4>Выберите стенд:</h4>
+            <div class="view">
+                <img alt="Нижегородский Кремль" src="img/kremlin.jpg" />
+                <div class="mask" style="background-color: rgba(132, 1, 28, 0.78)">
+                    <h2>Архитектурный Нижний</h2>
+                    <p>Интересная информация об архитектуре Нижнего Новгорода</p>
+                    <a href="topics/architecture.html" class="info">Перейти</a>
+                </div>
+            </div>
+            <div class="view">
+                <img alt="Книга" src="img/book.jpg" />
+                <div class="mask" style="background-color: rgba(129,132,63,0.78)">
+                    <h2>Литературный Нижний</h2>
+                    <p>Интересная информация о нижегородской литературе</p>
+                    <a href="topics/literature.html" class="info">Перейти</a>
+                </div>
+            </div>
         </div>
     </main>
 </div>
