--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -36,7 +36,10 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-
+            <div style="display:flex; flex-direction:row;">
+                <h1>center div</h1>
+                <img style="margin-left: 50%" src="../img/test.jpg" />
+            </div>
         </div>
     </main>
 </div>
