--- a/topics/literature.html
+++ b/topics/literature.html
@@ -36,7 +36,10 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-
+            <h1>center div</h1>
+            <div style="display: inline-block;text-align: center">
+                <img style="display: inline-block;text-align: center" src="../img/test.jpg" />
+            </div>
         </div>
     </main>
 </div>
