Цвет кнопки-гамбургера

--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -36,12 +36,21 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <div style="display:flex; flex-direction:row;">
-                <h1>center div</h1>
-                <img style="margin-left: 50%" src="../img/test.jpg" />
+            <div id="content">
+                <h3>Архитектурный Нижний</h3>
+                Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
+                <h4>Нижегородский Кремль</h4>
             </div>
         </div>
     </main>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">03 октября 2019 г.</div>
+        </div>
+        <div class="mdl-mini-footer__right-section">
+            <div class="mdl-logo">Гимназия №2</div>
+        </div>
+    </footer>
 </div>
 
 </body>
