--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -7,7 +7,8 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
-    <script src="../js/common.js"></script>
+    <script src="../js/topic.js"></script>
+    <link rel="stylesheet" href="../css/topic.css">
     <title>Архитектурный Нижний - Исторический зал</title>
 </head>
 <body>
@@ -39,7 +40,14 @@
             <div id="content">
                 <h3>Архитектурный Нижний</h3>
                 Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
-                <h4>Нижегородский Кремль</h4>
+                <div class="table_of_contents">
+                    <b>Содержание:</b>
+                    <ul>
+                        <li><a onclick="goTo('kremlin')">Нижегородский Кремль</a></li>
+                    </ul>
+                </div>
+                <h4 id="kremlin">Нижегородский Кремль</h4>
+                Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
             </div>
         </div>
     </main>
