--- a/topics/literature.html
+++ b/topics/literature.html
@@ -7,7 +7,8 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
-    <script src="../js/common.js"></script>
+    <script src="../js/topic.js"></script>
+    <link rel="stylesheet" href="../css/topic.css">
     <title>Литературный Нижний - Исторический зал</title>
 </head>
 <body>
