Пример аудиоряда, улучшения

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <h4>Выберите стенд:</h4>
             <div id="view_container">
                 <div class="view">
-                    <img alt="Нижегородский Кремль" src="img/kremlin.jpg" />
+                    <img alt="Архитектурный Нижний" src="img/architecture.jpg" />
                     <div class="mask" style="background-color: rgba(132, 1, 28, 0.78)">
                         <h2>Архитектурный Нижний</h2>
                         <p>Интересная информация об архитектуре Нижнего Новгорода</p>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="view">
-                    <img alt="Книга" src="img/book.jpg" />
+                    <img alt="Литературный Нижний" src="img/literature.jpg" />
                     <div class="mask" style="background-color: rgba(129,132,63,0.78)">
                         <h2>Литературный Нижний</h2>
                         <p>Интересная информация о нижегородской литературе</p>
@@ -58,8 +58,18 @@
                     </div>
                 </div>
             </div>
+            <a href="video_audio.mp3">Пример аудиоряда</a>
         </div>
     </main>
+    <br>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <div class="mdl-logo">03 октября 2019 г.</div>
+        </div>
+        <div class="mdl-mini-footer__right-section">
+            <div class="mdl-logo">Гимназия №2</div>
+        </div>
+    </footer>
 </div>
 
 </body>
