--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -37,7 +37,7 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <div id="content">
+            <div class="content">
                 <h3>Архитектурный Нижний</h3>
                 Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
                 <div class="table_of_contents">
@@ -46,11 +46,15 @@
                         <li><a onclick="goTo('kremlin')">Нижегородский Кремль</a></li>
                     </ul>
                 </div>
-                <h4 id="kremlin">Нижегородский Кремль</h4>
-                Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
+                <div id="kremlin">
+                    <h4>Нижегородский Кремль</h4>
+                    Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
+                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль" />
+                </div>
             </div>
         </div>
     </main>
+    <br>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <div class="mdl-logo">03 октября 2019 г.</div>
