Демо-версия архитектуры

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <script src="design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="css/common.css">
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Merriweather' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/index.css">
     <title>Исторический зал</title>
 </head>
@@ -29,7 +28,6 @@
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link mdl-navigation-current-topic">Главная</a>
-            <br>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
                 <a class="mdl-navigation__link" href="topics/architecture.html">Архитектурный Нижний</a>
                 <a class="mdl-navigation__link" href="topics/literature.html">Литературный Нижний</a>
@@ -46,7 +44,7 @@
                     <div class="mask" style="background-color: rgba(132, 1, 28, 0.78)">
                         <h2>Архитектурный Нижний</h2>
                         <p>Интересная информация об архитектуре Нижнего Новгорода</p>
-                        <a href="topics/architecture.html" class="info">Перейти</a>
+                        <a href="topics/architecture.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
                 <div class="view">
@@ -54,7 +52,7 @@
                     <div class="mask" style="background-color: rgba(129,132,63,0.78)">
                         <h2>Литературный Нижний</h2>
                         <p>Интересная информация о нижегородской литературе</p>
-                        <a href="topics/literature.html" class="info">Перейти</a>
+                        <a href="topics/literature.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
             </div>
