--- a/topics/architecture.html
+++ b/topics/architecture.html
@@ -44,12 +44,21 @@
                     <b>Содержание:</b>
                     <ul>
                         <li><a onclick="goTo('kremlin')">Нижегородский Кремль</a></li>
+                        <li><a onclick="goTo('chkalov_stairs')">Чкаловская лестница</a></li>
                     </ul>
                 </div>
                 <div id="kremlin">
                     <h4>Нижегородский Кремль</h4>
                     Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
-                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль" />
+                    <br>
+                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль - 1" />
+                </div>
+                <div id="chkalov_stairs">
+                    <h4>Чкаловская лестница</h4>
+                    Чкаловская лестница это тоже очень узнаваемая достопримечательность.
+                    <br>
+                    <img src="../img/topic/chkalov_stairs1.jpg" alt="Чкаловская лестница - 1" />
+                    <img src="../img/topic/chkalov_stairs2.jpg" alt="Чкаловская лестница - 2" />
                 </div>
             </div>
         </div>
