--- a/topics/literature.html
+++ b/topics/literature.html
@@ -37,7 +37,7 @@
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <h1>center div</h1>
+            <h1>центрирование div</h1>
             <div style="display: inline-block;text-align: center">
                 <img style="display: inline-block;text-align: center" src="../img/test.jpg" />
             </div>
