--- a/topics/literature.html
+++ b/topics/literature.html
@@ -17,14 +17,15 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">
+                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+                <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
                 <img class="navigation-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
-                <span class="mdl-layout__header-title-text">Исторический зал</span>
             </span>
         </div>
     </header>
     <div class="mdl-layout__drawer">
         <div class="mdl-layout-drawer-title-area">
-            <img class="navigation-logo mdl-layout-drawer-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+            <img class="navigation-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
