--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -17,22 +17,21 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">
-                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+                <img class="mini-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
                 <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
-                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
             </span>
         </div>
     </header>
     <div class="mdl-layout__drawer">
         <div class="mdl-layout-drawer-title-area">
-            <img class="navigation-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            <img class="mini-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
                 <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="literature.html">Литературный Нижний</a>
+                <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
             </span>
         </nav>
     </div>
@@ -67,10 +66,12 @@
     <br>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
-            <div class="mdl-logo">03 октября 2019 г.</div>
+            <img class="mdl-logo mini-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+            <div class="mdl-logo about">Исторический зал<br>"80 столетий Нижнего"</div>
         </div>
         <div class="mdl-mini-footer__right-section">
-            <div class="mdl-logo">Гимназия №2</div>
+            <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
+            <img class="mdl-logo mini-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
         </div>
     </footer>
 </div>
