--- a/topics/literary.html
+++ b/topics/literary.html
@@ -17,21 +17,21 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">
-                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+                <img class="mini-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
                 <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
-                <img class="navigation-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+                <img class="mini-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
             </span>
         </div>
     </header>
     <div class="mdl-layout__drawer">
         <div class="mdl-layout-drawer-title-area">
-            <img class="navigation-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            <img class="mini-logo mdl-layout-drawer-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link" href="architecture.html">Архитектурный Нижний</a>
+                <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
                 <a class="mdl-navigation__link mdl-navigation-current-topic">Литературный Нижний</a>
             </span>
         </nav>
