--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <br>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
-            <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской Области">
+            <img class="mdl-logo mini-logo" src="img/coat_of_arms.png" alt="Герб Нижегородской области">
             <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего"</div>
         </div>
         <div class="mdl-mini-footer__right-section">
