--- a/topics/literary.html
+++ b/topics/literary.html
@@ -19,7 +19,7 @@
             <span class="mdl-layout-title">
                 <img class="mini-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
                 <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
-                <img class="mini-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской Области">
+                <img class="mini-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской области">
             </span>
         </div>
     </header>
