--- a/404.html
+++ b/404.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./design/mdl/material.min.css">
-    <script src="./design/mdl/material.min.js"></script>
+    <link rel="stylesheet" href="/design/mdl/material.min.css">
+    <script src="/design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/index.css">
     <title>Исторический зал - Страница не найдена</title>
     <style>
         .outer {
@@ -37,27 +37,27 @@
     <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
             <span class="mdl-layout-title">
-                <img class="mini-logo mdl-layout__header-title-logo" src="./img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+                <img class="mini-logo mdl-layout__header-title-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
                 <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
             </span>
         </div>
     </header>
     <div class="mdl-layout__drawer">
         <div class="mdl-layout-drawer-title-area">
-            <img class="mini-logo mdl-layout-drawer-title-logo" src="./img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            <img class="mini-logo mdl-layout-drawer-title-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
             <span class="mdl-layout-title">Исторический зал</span>
         </div>
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="/index.html">Главная</a>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link" href="./topics/architectural.html">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/literary.html">Литературный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/theatrical.html">Театральный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/industrial.html">Промышленный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/victorious.html">Победный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/musical.html">Музыкальный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/orthodoxic.html">Православный Нижний</a>
-                <a class="mdl-navigation__link" href="./topics/honorary_citizens.html">Почетные граждане</a>
+                <a class="mdl-navigation__link" href="/topics/architectural.html">Архитектурный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/literary.html">Литературный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/theatrical.html">Театральный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/industrial.html">Промышленный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/victorious.html">Победный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/musical.html">Музыкальный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/orthodoxic.html">Православный Нижний</a>
+                <a class="mdl-navigation__link" href="/topics/honorary_citizens.html">Почетные граждане</a>
             </span>
         </nav>
     </div>
@@ -77,12 +77,12 @@
     <br>
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
-            <img class="mdl-logo mini-logo" src="./img/coat_of_arms.png" alt="Герб Нижегородской области">
+            <img class="mdl-logo mini-logo" src="/img/coat_of_arms.png" alt="Герб Нижегородской области">
             <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего"</div>
         </div>
         <div class="mdl-mini-footer__right-section">
             <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
-            <img class="mdl-logo mini-logo" src="./img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+            <img class="mdl-logo mini-logo" src="/img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
         </div>
     </footer>
 </div>
