--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
                     <div class="inner">
                         <h3>Страница не найдена</h3>
                         <h4>Ошибка 404</h4>
-                        <img style="width: 25%;height:10%" src="img/flag.jpg" alt="Флаг Нижегородской области" />
+                        <img style="width: 25%;height:10%" src="/img/flag.jpg" alt="Флаг Нижегородской области" />
                     </div>
                 </div>
             </div>
