--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -67,7 +67,7 @@
     <footer class="mdl-mini-footer">
         <div class="mdl-mini-footer__left-section">
             <img class="mdl-logo mini-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской области">
-            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего"</div>
+            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
         </div>
         <div class="mdl-mini-footer__right-section">
             <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
