--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/index.css">
-    <title>Исторический зал - Страница не найдена</title>
+    <title>Страница не найдена - Исторический зал</title>
     <style>
         .outer {
             display: table;
