--- a/topics/literary.html
+++ b/topics/literary.html
@@ -19,7 +19,6 @@
             <span class="mdl-layout-title">
                 <img class="mini-logo mdl-layout__header-title-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
                 <span class="mdl-layout__header-title-text">Исторический зал</span>&nbsp;&nbsp;
-                <img class="mini-logo mdl-layout__header-title-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской области">
             </span>
         </div>
     </header>
@@ -33,17 +32,54 @@
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
                 <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
                 <a class="mdl-navigation__link mdl-navigation-current-topic">Литературный Нижний</a>
+                <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
+                <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
+                <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
+                <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
+                <a class="mdl-navigation__link" href="orthodoxic.html">Православный Нижний</a>
+                <a class="mdl-navigation__link" href="honorary_citizens.html">Почетные граждане</a>
             </span>
         </nav>
     </div>
     <main class="mdl-layout__content">
         <div class="page-content">
-            <h1>центрирование div</h1>
-            <div style="display: inline-block;text-align: center">
-                <img style="display: inline-block;text-align: center" src="../img/test.jpg" />
+            <div class="content">
+                <h3>Литературный Нижний</h3>
+                Нижний Новгород - город с почти тысячелетней историей, в том числе литературы.
+                <div class="table_of_contents">
+                    <b>Содержание:</b>
+                    <ul>
+                        <li><a onclick="goTo('kremlin')">Нижегородский Кремль</a></li>
+                        <li><a onclick="goTo('chkalov_stairs')">Чкаловская лестница</a></li>
+                    </ul>
+                </div>
+                <div id="kremlin">
+                    <h4>Нижегородский Кремль</h4>
+                    Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
+                    <br>
+                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль - 1" />
+                </div>
+                <div id="chkalov_stairs">
+                    <h4>Чкаловская лестница</h4>
+                    Чкаловская лестница это тоже очень узнаваемая достопримечательность.
+                    <br>
+                    <img src="../img/topic/chkalov_stairs1.jpg" alt="Чкаловская лестница - 1" />
+                    <img src="../img/topic/chkalov_stairs2.jpg" alt="Чкаловская лестница - 2" />
+                </div>
             </div>
         </div>
     </main>
+    <br>
+    <footer class="mdl-mini-footer">
+        <div class="mdl-mini-footer__left-section">
+            <img class="mdl-logo mini-logo" src="../img/coat_of_arms.png" alt="Герб Нижегородской области">
+            <div class="mdl-logo about">Исторический зал<br>"Восемь столетий Нижнего Новгорода"</div>
+        </div>
+        <div class="mdl-mini-footer__right-section">
+            <div class="mdl-logo about gymnasium">МАОУ<br>"Гимназия №2"</div>
+            <img class="mdl-logo mini-logo" src="../img/gymnasium_logo.png" alt="Эмблема Гимназии №2">
+        </div>
+    </footer>
 </div>
 
 </body>
