--- a/topics/theatrical.html
+++ b/topics/theatrical.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/common.css">
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
-    <title>Архитектурный Нижний - Исторический зал</title>
+    <title>Театральный Нижний - Исторический зал</title>
 </head>
 <body>
 
@@ -30,9 +30,9 @@
         <nav class="mdl-navigation">
             <a class="mdl-navigation__link" href="../index.html">Главная</a>
             <span class="mdl-layout__drawer-navigation-subcategory">Стенды:
-                <a class="mdl-navigation__link mdl-navigation-current-topic">Архитектурный Нижний</a>
-                <a class="mdl-navigation__link" href="theatrical.html">Литературный Нижний</a>
-                <a class="mdl-navigation__link" href="theatrical.html">Театральный Нижний</a>
+                <a class="mdl-navigation__link" href="architectural.html">Архитектурный Нижний</a>
+                <a class="mdl-navigation__link" href="literary.html">Литературный Нижний</a>
+                <a class="mdl-navigation__link mdl-navigation-current-topic">Театральный Нижний</a>
                 <a class="mdl-navigation__link" href="industrial.html">Промышленный Нижний</a>
                 <a class="mdl-navigation__link" href="victorious.html">Победный Нижний</a>
                 <a class="mdl-navigation__link" href="musical.html">Музыкальный Нижний</a>
@@ -44,8 +44,8 @@
     <main class="mdl-layout__content">
         <div class="page-content">
             <div class="content">
-                <h3>Архитектурный Нижний</h3>
-                Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
+                <h3>Литературный Нижний</h3>
+                Нижний Новгород - город с почти тысячелетней историей, в том числе театров.
                 <div class="table_of_contents">
                     <b>Содержание:</b>
                     <ul>
