Более удобный способ повесить скролл на главу

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -49,8 +49,8 @@
                 <div class="table_of_contents">
                     <b>Содержание:</b>
                     <ul>
-                        <li><a onclick="goTo('kremlin')">Нижегородский Кремль</a></li>
-                        <li><a onclick="goTo('chkalov_stairs')">Чкаловская лестница</a></li>
+                        <li><a data-section="kremlin">Нижегородский Кремль</a></li>
+                        <li><a data-section="chkalov_stairs">Чкаловская лестница</a></li>
                     </ul>
                 </div>
                 <div id="kremlin">
