Динамическая генерация содержания

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -46,25 +46,19 @@
             <div class="content">
                 <h3>Архитектурный Нижний</h3>
                 Нижний Новгород - город с почти тысячелетней историей, в том числе архитектуры.
-                <div class="table_of_contents">
-                    <b>Содержание:</b>
-                    <ul>
-                        <li><a data-section="kremlin">Нижегородский Кремль</a></li>
-                        <li><a data-section="chkalov_stairs">Чкаловская лестница</a></li>
-                    </ul>
-                </div>
-                <div id="kremlin">
+                <div id="table_of_contents"></div>
+                <div class="chapter" id="kremlin" data-chapter="Нижегородский Кремль">
                     <h4>Нижегородский Кремль</h4>
                     Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
                     <br>
-                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль - 1" />
+                    <img src="../img/topic/kremlin1.jpg"/>
                 </div>
-                <div id="chkalov_stairs">
+                <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
                     <h4>Чкаловская лестница</h4>
                     Чкаловская лестница это тоже очень узнаваемая достопримечательность.
                     <br>
-                    <img src="../img/topic/chkalov_stairs1.jpg" alt="Чкаловская лестница - 1" />
-                    <img src="../img/topic/chkalov_stairs2.jpg" alt="Чкаловская лестница - 2" />
+                    <img src="../img/topic/chkalov_stairs1.jpg"/>
+                    <img src="../img/topic/chkalov_stairs2.jpg"/>
                 </div>
             </div>
         </div>
