Реструктуризация, динамическая вставка изображений

--- a/topics/architectural.html
+++ b/topics/architectural.html
@@ -7,6 +7,7 @@
     <script src="../design/mdl/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="../css/common.css">
+    <script>var topicName='Архитектурный Нижний';var topicId='architectural'</script>
     <script src="../js/topic.js"></script>
     <link rel="stylesheet" href="../css/topic.css">
     <title>Архитектурный Нижний - Исторический зал</title>
@@ -51,14 +52,14 @@
                     <h4>Нижегородский Кремль</h4>
                     Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
                     <br>
-                    <img src="../img/topic/kremlin1.jpg"/>
+                    <img/>
                 </div>
                 <div class="chapter" id="chkalov_stairs" data-chapter="Чкаловская лестница">
                     <h4>Чкаловская лестница</h4>
                     Чкаловская лестница это тоже очень узнаваемая достопримечательность.
                     <br>
-                    <img src="../img/topic/chkalov_stairs1.jpg"/>
-                    <img src="../img/topic/chkalov_stairs2.jpg"/>
+                    <img/>
+                    <img/>
                 </div>
             </div>
         </div>
