--- a/topics/industrial.html
+++ b/topics/industrial.html
@@ -57,14 +57,14 @@
                     <h4>Нижегородский Кремль</h4>
                     Нижегородскому Кремлю уже более 500 лет, и, возможно, это самая узнаваемая достопримечательность города.
                     <br>
-                    <img src="../img/topic/kremlin1.jpg" alt="Нижегородский Кремль - 1" />
+                    <img src="../img/topic/architectural/kremlin/img1.jpg" alt="Нижегородский Кремль - 1" />
                 </div>
                 <div id="chkalov_stairs">
                     <h4>Чкаловская лестница</h4>
                     Чкаловская лестница это тоже очень узнаваемая достопримечательность.
                     <br>
-                    <img src="../img/topic/chkalov_stairs1.jpg" alt="Чкаловская лестница - 1" />
-                    <img src="../img/topic/chkalov_stairs2.jpg" alt="Чкаловская лестница - 2" />
+                    <img src="../img/topic/architectural/chkalov_stairs/img1.jpg" alt="Чкаловская лестница - 1" />
+                    <img src="../img/topic/architectural/chkalov_stairs/img2.jpg" alt="Чкаловская лестница - 2" />
                 </div>
             </div>
         </div>
