Войне со строчной буквы

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <img alt="Победный Нижний" src="img/cards/victory.jpg" />
                     <div class="mask" style="background-color: rgba(25,132,74,0.73)">
                         <h2>Победный Нижний</h2>
-                        <p>Вклад нижегородцев в победе в Великой Отечественной Войне</p>
+                        <p>Вклад нижегородцев в победе в Великой Отечественной войне</p>
                         <a href="topics/victorious.html" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect info">Перейти</a>
                     </div>
                 </div>
